new and show working with variable model and attributes

--- a/templates/showFormFields.template
+++ b/templates/showFormFields.template
@@ -1,3 +1,3 @@
 <% _.forEach(modelAttributeNames, function (name) { %>
-	<h1><%= modelControllerName %>.<%= name %></h1>
+	<h1> ERBstart <%= modelControllerName %>.<%= name %> ERBend </h1>
 <% }) %>
