--- a/templates/newFormFields.template
+++ b/templates/newFormFields.template
@@ -1,7 +1,5 @@
+<% _.forEach(modelAttributeNames, function (name) { %>
 	<div class="control-group">
-	<input type="text" class="form-control" placeholder="your name" name="name">
+	<input type="text" class="form-control" placeholder="<%= name %>" name="<%= name %>">
 	</div>
-	
-	<div class="control-group">
-	<input type="text" class="form-control" placeholder="email address" name="email">
-	</div>
+<% }) %>
