added titles to show view

--- a/templates/actionParamObject.template
+++ b/templates/actionParamObject.template
@@ -1,5 +1,5 @@
 var paramObj = {
-	<% _.forEach(modelAttributeNames, function (name) { %>
-		<%= name %>: req.param('<%= name %>')
-	<% }) %>
-}
+<% _.forEach(modelAttributeNames, function (name) { %>
+      <%= name %>: req.param('<%= name %>'),
+<% }) %>
+    }
