added support for index action and view

--- a/templates/action.template
+++ b/templates/action.template
@@ -33,5 +33,15 @@
         <%= modelControllerName %>: <%= modelControllerName %>
       });
     });
+  },
+
+  index: function(req, res, next) {
+    <%= id %>.find(function found<%= id %>s(err, <%= modelControllerName %>s) {
+      if (err) return next(err);
+      
+      res.view({
+        <%= modelControllerName %>s: <%= modelControllerName %>s
+      });
+    });
   }
  
