--- a/templates/new.template
+++ b/templates/new.template
@@ -1,5 +1,5 @@
 <form action="/<%= modelControllerName %>/create" method="POST" id="sign-up-form" class="form-signin">
 	<h2 class="form-signin-heading">Create an account</h2>
 	<%= compiledNewFormFields %>
-	<input type="submit" class="btn btn-lg btn-primary btn-block" value="Submit"/>
+	<input type="submit" value="Submit"/>
 </form>
