--- a/templates/showFormFields.template
+++ b/templates/showFormFields.template
@@ -1,3 +1,3 @@
 <% _.forEach(modelAttributeNames, function (name) { %>
-	<h1><%= name %>:  ERBstart <%= modelControllerName %>.<%= name %> ERBend </h1>
+	<b><%= name %></b>:  ERBstart <%= modelControllerName %>.<%= name %> ERBend <hr>
 <% }) %>
