--- a/templates/indexTableData.template
+++ b/templates/indexTableData.template
@@ -3,7 +3,7 @@
 			<td>ERBstart <%= modelControllerName %>.<%= name %>ERBend</td>
 		<% }) %>
 			<td><a href="/<%= modelControllerName %>/show/ERBstart<%= modelControllerName %>.id ERBend">Show</a></td>
-			<td><a href="/<%= modelControllerName %>/edit/<%= modelControllerName.id %>">Edit</a></td>
+			<td><a href="/<%= modelControllerName %>/edit/ERBstart<%= modelControllerName %>.id ERBend">Edit</a></td>
 
 			<td><form action="/<%= modelControllerName %>/destroy/<%= modelControllerName.id %>" method="POST">
 				<input type="hidden" name="_method" value="delete"/>
