--- a/templates/new.template
+++ b/templates/new.template
@@ -1,5 +1,5 @@
 <form action="/<%= modelControllerName %>/create" method="POST" id="sign-up-form" class="form-signin">
-	<h2 class="form-signin-heading">Create an account</h2>
+	<h2 class="form-signin-heading">Create a <%= modelControllerName %></h2>
 	<%= compiledNewFormFields %>
 	<input type="submit" value="Submit"/>
 </form>
