added flash message support for new view

--- a/templates/action.template
+++ b/templates/action.template
@@ -12,8 +12,10 @@
     <%= id %>.create(paramObj, function <%= modelControllerName %>Created(err, <%= modelControllerName %>) {
 
       if (err) {
-
-        // If error redirect back to sign-up page
+        console.log(err);
+        req.session.flash = {
+          err: err
+        }
         return res.redirect('/<%= modelControllerName %>/new');
       }
 
