added flash message support to edit view

--- a/templates/edit.template
+++ b/templates/edit.template
@@ -1,5 +1,6 @@
 	<%= compiledEditFormAction %>
 		<h2> Hey, you're editing a <%= modelControllerName %>... </h2>
+		<%= compiledEditFlash %>
 		<%= compiledEditFormFields %>
 		<input type="submit" value="Update <%= id %>" />
 	</form>
