--- a/templates/action.template
+++ b/templates/action.template
@@ -65,6 +65,12 @@
 
     <%= id %>.update(req.param('id'), paramObj, function <%= modelControllerName %>Updated(err) {
       if (err) {
+        console.log(err);
+
+        req.session.flash = {
+          err: err
+        }
+
         return res.redirect('/<%= modelControllerName %>/edit/' + req.param('id'));
       }
 
