--- a/templates/edit.template
+++ b/templates/edit.template
@@ -1,8 +1,10 @@
 	<%= compiledEditFormAction %>
-		<h2> Hey, you're editing a <%= modelControllerName %>... </h2>
+		<h2> editing a <%= modelControllerName %>... </h2>
 		<%= compiledEditFlash %>
 		<%= compiledEditFormFields %>
-		<input type="submit" value="Update <%= id %>" />
+		</div>
+		<input type="submit" value="Update <%= id %>" class="btn btn-default"/>
+		<%= compiledEditShowLink %>
 	</form>
-	<%= compiledEditShowLink %>
-	<a href="/<%= modelControllerName %>">Back</a>
+	
+	
