--- a/templates/editShowLink.template
+++ b/templates/editShowLink.template
@@ -1,1 +1,1 @@
-<a href="/<%= modelControllerName %>/show/ERBstart<%= modelControllerName %>.id ERBend">Show</a> |
+<a href="/<%= modelControllerName %>/show/ERBstart<%= modelControllerName %>.id ERBend" class="btn btn-danger">Cancel</a>
