--- a/templates/index.template
+++ b/templates/index.template
@@ -1,8 +1,8 @@
 <div class="container">
 	<h3><%= id %> Listing</h3>
-	<table class='table'>
+	<table class='table table-hover table-condensed'>
 	<%= compiledIndexTableHeadings %>
 	<%= compiledIndexForEach %>
 	</table>
-	<a href="/<%= modelControllerName%>/new/">New <%= id %></a>
+	<a href="/<%= modelControllerName%>/new/" class="btn btn-success btn-sm" role="button">New <%= id %></a>
 </div>
