--- a/templates/new.template
+++ b/templates/new.template
@@ -1,7 +1,9 @@
-<form action="/<%= modelControllerName %>/create" method="POST" id="sign-up-form" class="form-signin">
-	<h2 class="form-signin-heading">Create a <%= modelControllerName %></h2>
+<form action="/<%= modelControllerName %>/create" method="POST" role="form" class="new">
+	<div class="form-group">
+	<h2>Create a <%= modelControllerName %></h2>
 
 <%= compiledNewFlash %>
 	<%= compiledNewFormFields %>
-	<input type="submit" value="Submit"/>
+	</div>
+	<input type="submit" value="Submit" class="btn btn-default"/>
 </form>
