--- a/templates/show.template
+++ b/templates/show.template
@@ -1,5 +1,9 @@
-<div class='container'>
-	<%= compiledShowFormFields %>
+<form class="show">
+	<div class="form-group">
+		<h2> a <%= modelControllerName %>... </h2>
+		<%= compiledShowFormFields %>
+</div>
 </div>
 <%= compiledShowEditLink %>
-<a href="/<%= modelControllerName %>">Back</a>
+<a href="/<%= modelControllerName %>">Back to list</a>
+</form>
