--- a/templates/showFormFields.template
+++ b/templates/showFormFields.template
@@ -1,3 +1,6 @@
 <% _.forEach(modelAttributeNames, function (name) { %>
-	<b><%= name %></b>:  ERBstart <%= modelControllerName %>.<%= name %> ERBend <hr>
+	<div class="form-group" style="width: 400px;">
+	<label>name</label>
+	<input value="ERBstart <%= modelControllerName %>.<%= name %> ERBend" name="<%= name %>" type="text" class="form-control" disabled/>
+	</div>
 <% }) %>
