--- a/templates/new.template
+++ b/templates/new.template
@@ -5,5 +5,6 @@
 <%= compiledNewFlash %>
 	<%= compiledNewFormFields %>
 	</div>
-	<input type="submit" value="Submit" class="btn btn-default"/>
+	<input type="submit" value="Submit" class="btn btn-default"/> | 
+	<a href="/<%= modelControllerName %>">Back to list</a>
 </form>
