--- a/templates/index.template
+++ b/templates/index.template
@@ -4,5 +4,6 @@
 	<%= compiledIndexTableHeadings %>
 	<%= compiledIndexForEach %>
 	</table>
-	<a href="/<%= modelControllerName%>/new/" class="btn btn-success btn-sm" role="button">New <%= id %></a>
+	<a href="/<%= modelControllerName%>/new/" class="btn btn-success btn-sm" role="button">New <%= id %></a> |
+	<a href="/">all spars</a>
 </div>
